<resources>

    <string name="app_name">AppStoreBate</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AppStoreBate</string>
    
    <string name="app_subject">"专题"</string>
    <string name="app_name_1">"应用名称："</string>
    <string name="app_name_author">"作者："</string>
    <string name="app_name_grade">"评分："</string>
    <string name="app_name_source">"来源："</string>
    <string name="app_name_version">"版本："</string>
    <string name="app_name_detail">"详细描述："</string>
    <string name="app_name_download">下载&amp;安装</string>
    <string name="app_name_click_more">"查看更多"</string>
    <string name="app_name_click_pack_up">"收起"</string>
    <string name="app_no_comment">"暂无评论"</string>
    <string name="app_update">"更新"</string>
    <string name="app_not_update">"最新"</string>
    <string name="pre_page">"上一页"</string>
    <string name="next_page">"下一页"</string>
    
    <string name="nosdcard">没有找到sd卡，请插入sd卡再进行下载完成更新。</string>
    <string name="net_error">网络不稳定数据加载失败!</string>

</resources>