<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main_blue"
    android:scrollbars="none"  >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_single_info"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/app_name_introduce"
                android:layout_width="fill_parent"
                android:layout_height="135dip"
                android:layout_marginLeft="46dip"
                android:layout_marginTop="15dip" >

                <ImageView
                    android:id="@+id/app_pic"
                    android:layout_width="85dip"
                    android:layout_height="135dip"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/app_author"
                    style="@style/font"
                    android:layout_width="340dip"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="97dp"
                    android:text="@string/app_name_author" />

                <TextView
                    android:id="@+id/app_source"
                    style="@style/font"
                    android:layout_width="340dip"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name_source" />

                <TextView
                    android:id="@+id/app_grade"
                    style="@style/font"
                    android:layout_width="340dip"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/app_author"
                    android:layout_alignParentBottom="true"
                    android:text="@string/app_name_grade" />

                <TextView
                    android:id="@+id/app_name"
                    style="@style/font"
                    android:layout_width="340dip"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/app_author"
                    android:layout_alignParentTop="true"
                    android:text="@string/app_name_1" />

                <TextView
                    android:id="@+id/app_version"
                    style="@style/font"
                    android:layout_width="340dip"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/app_source"
                    android:layout_alignTop="@id/app_author"
                    android:text="@string/app_name_version" />

                <Button
                    android:id="@+id/app_download"
                    android:layout_width="150dip"
                    android:layout_height="80dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="137dp"
                    android:background="@drawable/select_button"
                    style="@style/font"
                    android:text="@string/app_name_download" />
            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="46dip"
                android:layout_marginRight="46dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/divider_line_new" />

            <LinearLayout
                android:id="@+id/app_name_introduce"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/app_pic"
                android:layout_marginLeft="46dip"
                android:layout_marginTop="5dip"
                android:orientation="vertical" >

                <TextView
                    style="@style/font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_detail" />

                <TextView
                    android:id="@+id/app_comment"
                    style="@style/font.detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="xxxxxxxxxxx" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_show_more"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dip"
                android:layout_marginRight="46dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <View
                    android:id="@+id/view1"
                    android:layout_width="535dip"
                    android:layout_height="2dip"
                    android:background="@drawable/divider_line_new" />

                <TextView
                    android:id="@+id/app_show_info"
                    style="@style/font.detail"
                    android:layout_width="110dip"
                    android:layout_height="40dip"
                    android:layout_below="@+id/app_detail"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dip"
                    android:layout_toRightOf="@+id/view1"
                    android:background="@drawable/select_button"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/app_name_click_more" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="535dip"
                    android:layout_height="2dip"
                    android:background="@drawable/divider_line_new" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1188dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="46dip"
                android:layout_marginTop="20dip"
                android:orientation="horizontal" >

                <Gallery
                    android:id="@+id/app_gallery"
                    android:layout_width="fill_parent"
                    android:layout_height="287dp"
                    android:gravity="center"
                    android:spacing="20dip" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/content_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dip"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>